[481551] - Applying patch from Keith Chong. Tested fix, which allows for buildpack names to be used instead of just URLs.